# backtester

./: .coverage  .gitignore  README.md  SPY.csv  SPY.xlsx  pyproject.toml
src/backtester/: Account.py  HistoricalData.py  OMS.py  Order.py  Simulation.py  __init__.py
src/backtester/Account/: Account.py
src/backtester/Orders/: Order.py
src/backtester/Simulation/: HistoricalData.py  Simulation.py
src/backtester/account/: account.py  backtest_account.py
src/backtester/brokerage/: account.py  backtest_account.py  order.py  order_logic.py  order_management_system.py
src/backtester/data/: data_processor.py  historical_data.py
src/backtester/orders/: OMS.py  __init__.py  oms.py  order.py  order_logic.py  order_management_system.py
src/backtester/simulation/: csv_helper.py  data_processor.py  historical_data.py  simulation.py
tests/: account_test.py  order_logic_test.py  order_management_system_test.py  test.py  test_account.py  test_backtest_account.py  test_backtest_cash_account.py  test_backtest_margin_account.py  test_candlestick_processor.py  test_order_logic.py  test_order_management_system.py  test_simulation.py
tests/unit/: test_account.py  test_candlestick_processor.py  test_order_logic.py  test_order_management_system.py
