[project]
name = "backtester"
version = "0.1.0"
description = "A backtesting framework for trading strategies"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Mason" }
]
dependencies = [
    "pandas>=2.2.3",
    "numpy>=1.26.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backtester"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/backtester --cov-report=term-missing"